--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -25,7 +25,7 @@
   margin-right: 40px;
 }
 .bivnBruxelles .liste {
-  margin-right: -8%;
+  margin-right: -15%;
 }
 
 body {
@@ -52,9 +52,15 @@ body.dark-mode {
   a {
     color: white;
   }
+  a:hover {
+    color: yellow;
+  }
   .accueilPresentation {
     color: black;
   
+  }
+  .contactDirect a {
+    color: black;
   }
 #myBtn {
   background-color: white;
@@ -365,7 +371,7 @@ button {
 
 /*---------------SLIDER ACTU ET AGENDA------------------*/
 .titleactu {
-  margin-left: 21.1%;
+  margin-left: 16.8%;
 
 }
 .gallery{
@@ -436,26 +442,37 @@ span img{
 
 }
 .lienactu, .lienage {
-  text-decoration: none;
-  margin-left: 18.5%;
-  margin-top: -2%;
-  list-style-type: none;
   
+  text-decoration: none;
+  margin-left: 14.8%;
+  margin-top: -5%;
+  list-style-type: none;
+ 
+ 
 }
 
-.soon {
-  color: black;
-  
+
+.lienage1, .lienactu1 {
+  margin-top: -4%;
+  list-style-type: none;
+  text-decoration: none;
+  margin-left: 68%;
 }
-.soon:hover {
+
+.lienactu a, .lienactu1 a, .lienage1 a, .lienage a {
+  color:black;
+}
+
+.agen1:hover, .agen2:hover, .actu1:hover, .actu2:hover {
   color:yellow;
 }
 
 /*---------------footer------------------*/
 .fa-twitter {
+  padding: 10px;
   font-size: 30px;
   color: black;
-  margin-left: 40%;
+  margin-left: 42.5%;
 }
 
 .fa-facebook-f, .fa-instagram, .fa-youtube, .fa-tiktok, .fa-spotify {
@@ -467,10 +484,12 @@ span img{
 footer {
   border: 1px grey solid;
   height: 50%;
+  width: 100%;
   margin-top: 15%;
   background-color: grey;
   overflow: hidden;
   color: white;
+  padding-top: 1%;
 }
 
 .animalsfriends, .patrimoine {
@@ -479,7 +498,7 @@ footer {
 }
 
 .animalsfriends {
-  margin-left: 80%;
+  margin-left: 77.6%;
 }
 
 .citybxl {
@@ -505,7 +524,7 @@ footer {
 .foo {
   border: 1px black solid;
   box-shadow: -1px -1px 13px hsla(0, 0%, 9%, 0.25);
-  width: 58%;
+  width: 44.8%;
   height: 35px;
   border-bottom-right-radius: 30px;
   border-top-right-radius: 30px;
@@ -514,10 +533,11 @@ footer {
   text-transform: uppercase;
   list-style-type: none;
   color: black;
-  margin-left: 22%;
+  margin-left: 26%;
   margin-top: -7%;
   padding-top: 0.6%;
   overflow: hidden;
+  
 }
 
 .cpumlca {
@@ -527,28 +547,21 @@ footer {
 }
 
 .fa-brands:hover {
-  background-color: white;
+  background-color: yellow;
   opacity: 0.2;
 }
 
 .obcn {
-  margin-left: 40%;
-  margin-top: 5%;
+  margin-left: 44%;
+  margin-top: 3%;
+}
+.stng {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=style.css.map */
-/*@media screen and (max-width:900px) {
-  .bivnBruxelles {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  color: aqua;
-  width: 70em;
-  padding: 0.5em;
-  background-color: rgb(0, 0, 0);
-  font-size: 1.2em;
-  font-family: "Abril Fatface", cursive;
-  font-family: "Anuphan", sans-serif;
-  font-family: "Fira Sans", sans-serif;
-  font-family: "Montserrat", sans-serif; }
-}*/
+@media screen and (max-width: 4000px) {
+
+
+}
