--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -44,7 +44,7 @@ body {
   
   
 }
-#dark {
+#dark, #sombre  {
   height :35px;
   margin-top: -0.5%;
   padding-top: 0.5%;
@@ -72,7 +72,7 @@ body.dark-mode {
   background-color: white;
   color: black;
  }
- #dark {
+ #dark, #sombre {
   
   background-color: white;
   color: black
@@ -567,17 +567,10 @@ footer {
   text-decoration: underline;
 }
 
-.burger {
+
+.mobile-menu {
   display: none;
-  cursor: pointer;
-  
 }
-
-.bar {
- display: none;
-}
-
-
 
 @media only screen and (max-width : 930px) {
   /* Styles pour cette Media Queries */
@@ -585,10 +578,72 @@ footer {
     top: 35%;
     width: 70%;
   }
+ 
+  .bivnBruxelles {
+    overflow: hidden;
+  
+    margin: auto;
+  
+  }
+  
 .bvn {
   padding-top: -30%;
   font-size: 22px;
+  
 }
+.NECP {
+  display: none;
+}
+
+.mobile-menu {
+  display: block;
+  
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+ text-align: left;
+  
+}
+
+.dropbtn {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 12px;
+  font-size: 16px;
+  border: none;
+  
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: fixed;
+  background-color: black;
+  min-width: 160px;
+  font-size: 12px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  left: 60%;
+  top :7.5%;
+  text-align: center;
+ 
+}
+
+.dropdown-content a {
+  color: rgb(252, 252, 252);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  
+}
+
+
 
   .gallery{
 
