--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -154,6 +154,9 @@ button {
   transform: scale(1.2);
   transition: transform 0.3s;
 }
+.titletext {
+  margin-left: 3%;
+}
 .accueilPresentation .accueilTextes {
   padding-left: 1em;
 }
@@ -578,14 +581,19 @@ footer {
     top: 35%;
     width: 70%;
   }
- 
+
   .bivnBruxelles {
-    overflow: hidden;
-  
-    margin: auto;
-  
+    display: flex;
+    justify-content: space-between;
+    
   }
-  
+  #dark {
+    margin-left: -120%;
+    
+  }
+html {
+  overflow-x: hidden;
+}
 .bvn {
   padding-top: -30%;
   font-size: 22px;
@@ -603,7 +611,7 @@ footer {
 .dropdown {
   position: relative;
   display: inline-block;
- text-align: left;
+ 
   
 }
 
@@ -613,8 +621,9 @@ footer {
   padding: 12px;
   font-size: 16px;
   border: none;
-  
   cursor: pointer;
+ margin-left: -10%;
+  
 }
 
 .dropdown-content {
@@ -625,8 +634,8 @@ footer {
   font-size: 12px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  left: 60%;
-  top :7.5%;
+  left: 65%;
+  top :8.5%;
   text-align: center;
  
 }
@@ -744,6 +753,7 @@ span img{
 .accueilPresentation .accueilTextes {
   flex-flow: column wrap;
 }
+
 .accueilPresentation .alignementText {
  
   margin-left: 2%;
@@ -751,19 +761,18 @@ span img{
   width: 90%;
   
 }
-.alignementText {
- 
-  
-}
+
 .bru {
   margin-left:  2%;
 }
 .mapBruxelles {
   margin-left: auto;
   width: 100%;
+  margin-left: 0;
 }
 .mapBruxelles .maps {
-  margin-right: 20px;
+  width: 100%;
+
 }
 
 /* PAGE EVENEMENT */
