--- a/SCSS/components/carrousel.scss
+++ b/SCSS/components/carrousel.scss
@@ -1,13 +1,17 @@
 .titleactu {
-    margin-left: 21.1%;
+    margin-left: 16.8%;
+  
   }
   .gallery{
     position: relative;
     width: 500px;
     height: 400px;
     transform-style: preserve-3d;
-    animation: animate 50s linear  ;
+    animation: animate 30s linear infinite ;
     animation-play-state: running;
+    
+   
+    
     
   }
   
@@ -24,23 +28,31 @@
   .container {
       display: flex;
       justify-content: center;
+      align-items: center;
       min-height: 60vh;
-      margin-left: 1em; 
+      margin-left: 45%;
+      margin-right: 50%;
+      
+     
+      
+      
+      
   }
   .gallery:hover{
     animation-play-state:paused;
     
   }
   
-  span, .actu, .agenda{
+  .actu, .agenda{
     position: absolute;
     top: 0;
     left: auto;
     width: 200px;
     height: 200px;
     transform-style: preserve-3d;
-    transform: rotateY(calc(var(--i) * 80deg)) translateZ(400px);
-    -webkit-box-reflect: below 0px linear-gradient(transparent,transparent,#0004);
+    transform: rotateY(calc(var(--i) * 80deg)) translateZ(500px);
+   
+    
    
   }
   
@@ -48,24 +60,38 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
+    width: 400px;
     height: 300px;
     border-radius: 10px;
     object-fit: cover;
     cursor: pointer;
+    border: 7px  solid black;
+    
   
   }
   .lienactu, .lienage {
+    
     text-decoration: none;
-    margin-left: 18.5%;
-    margin-top: -2%;
+    margin-left: 14.8%;
+    margin-top: -5%;
     list-style-type: none;
+   
+   
   }
   
-  .soon {
-    color: black;
-    
+  
+  .lienage1, .lienactu1 {
+    margin-top: -4%;
+    list-style-type: none;
+    text-decoration: none;
+    margin-left: 68%;
   }
-  .soon:hover {
+  
+  .lienactu a, .lienactu1 a, .lienage1 a, .lienage a {
+    color:black;
+  }
+  
+  .agen1:hover, .agen2:hover, .actu1:hover, .actu2:hover {
     color:yellow;
   }
+  
