--- a/SCSS/layout/_footer.scss
+++ b/SCSS/layout/_footer.scss
@@ -1,7 +1,8 @@
 .fa-twitter {
+    padding: 10px;
     font-size: 30px;
     color: black;
-    margin-left: 40%;
+    margin-left: 42.5%;
   }
   
   .fa-facebook-f, .fa-instagram, .fa-youtube, .fa-tiktok, .fa-spotify {
@@ -13,10 +14,12 @@
   footer {
     border: 1px grey solid;
     height: 50%;
-    margin-top: 50%;
+    width: 100%;
+    margin-top: 15%;
     background-color: grey;
     overflow: hidden;
     color: white;
+    padding-top: 1%;
   }
   
   .animalsfriends, .patrimoine {
@@ -25,7 +28,7 @@
   }
   
   .animalsfriends {
-    margin-left: 80%;
+    margin-left: 77.6%;
   }
   
   .citybxl {
@@ -51,7 +54,7 @@
   .foo {
     border: 1px black solid;
     box-shadow: -1px -1px 13px hsla(0, 0%, 9%, 0.25);
-    width: 58%;
+    width: 44.8%;
     height: 35px;
     border-bottom-right-radius: 30px;
     border-top-right-radius: 30px;
@@ -60,10 +63,11 @@
     text-transform: uppercase;
     list-style-type: none;
     color: black;
-    margin-left: 22%;
+    margin-left: 26%;
     margin-top: -7%;
     padding-top: 0.6%;
     overflow: hidden;
+    
   }
   
   .cpumlca {
@@ -73,11 +77,18 @@
   }
   
   .fa-brands:hover {
-    background-color: white;
+    background-color: yellow;
     opacity: 0.2;
   }
   
   .obcn {
-    margin-left: 40%;
-    margin-top: 5%;
+    margin-left: 44%;
+    margin-top: 3%;
   }
+  .stng {
+    font-weight: bold;
+    text-decoration: underline;
+  }
+  
+  
+ 
