--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,9 +1,7 @@
-@import 'layout/header';
-@import 'themes/theme';
-@import 'pages/home';
 @import 'components/buttons';
-@import 'pages/contact';
-@import 'base/typography';
-@import 'layout/form';
+@import 'components/carrousel.scss';
 @import 'layout/footer';
-@import 'components/carrousel.scss'
+@import 'layout/header';
+@import 'pages/contact';
+@import 'pages/home';
+@import 'themes/theme';
