--- a/SCSS/pages/_contact.scss
+++ b/SCSS/pages/_contact.scss
@@ -4,10 +4,9 @@
     line-height: 25px;
     width: 900px;
     text-align: justify;
-    
-}
-
-.formulaire {
+  }
+  
+  .formulaire {
     margin: 0%;
     display: flex;
     flex-direction: column;
@@ -17,30 +16,28 @@
     border: solid black 2px;
     padding: 50px;
     background-color: rgba(234, 234, 234, 0.887);
-    .logoBruxelles {
-        width: 150px;
-        height: 75px;
-        
-      }
-    
-}
-
-.envoyer {
+  }
+  .formulaire .logoBruxelles {
+    width: 150px;
+    height: 75px;
+  }
+  
+  .envoyer {
     width: 10em;
-    background-color:white;
+    background-color: white;
     padding-top: 1em;
     padding-bottom: 1em;
     margin-left: 40%;
-}
-
-.ameliorations {
+  }
+  
+  .ameliorations {
     width: 84.5%;
     text-align: justify;
     font-size: 20px;
     line-height: 25px;
-}
-
-.contactDirect {
+  }
+  
+  .contactDirect {
     display: flex;
     flex-direction: column;
     line-height: 50px;
@@ -49,17 +46,15 @@
     border: solid black 2px;
     border-radius: 5%;
     background-color: rgba(234, 234, 234, 0.887);
-    a {
-        text-decoration: none;
-        color: black;
-        
-    }
-    a:hover {
-        color: rgba(255, 0, 0, 0.467);
-    }
-}
-
-.contactTel {
+  }
+  .contactDirect a {
+    text-decoration: none;
+    color: black;
+  }
+  .contactDirect a:hover {
+    color: rgba(255, 0, 0, 0.467);
+  }
+  
+  .contactTel {
     width: 84.5%;
-}
-
+  }
