--- a/SCSS/pages/_home.scss
+++ b/SCSS/pages/_home.scss
@@ -1,18 +1,15 @@
-.panorama {
-    
-    .grandeRoue {
-        width: 115.75em;
-        height: 30em;
-        position: relative;
-        transition: filter 0.3s ease-in-out;
-
-    }   
-    .grandeRoue:hover {
-        filter: brightness(115%);
-    }
-    .bvn {
-        
-        z-index: 1;
+.panorama .grandeRoue {
+    width: 100%;
+    height: 30em;
+    position: relative;
+    transition: filter 0.3s ease-in-out;
+  }
+  .panorama .grandeRoue:hover {
+    filter: brightness(115%);
+  }
+  .panorama .bvn {
+    z-index: 0;
+    height: 65px;
     position: absolute;
     text-align: center;
     margin: 0 auto;
@@ -22,92 +19,82 @@
     color: rgb(0, 0, 0);
     width: 70%;
     text-shadow: -1px -1px 0 rgb(255, 255, 255);
-    }
-}
+  }
 
-.decouvrezBruxelles {
+  .decouvrezBruxelles {
     margin-left: 20em;
-}
-
-.accueilPresentation {
+  }
+  
+  .accueilPresentation {
     display: flex;
     flex-direction: row;
     text-align: justify;
     background-color: rgba(234, 234, 234, 0.887);
     margin-left: 20em;
     margin-right: 20em;
-    .accueilImages {
-        width: 38em;
-        height: 20em;
-        transition: filter 0.3s ease-in-out;
-
-    }
-
-    .accueilImages:hover {
-        filter: brightness(115%);
-        transform: scale(1.2);
-        transition: transform 0.3s;
-    }
-
-
-    .accueilTextes {  
-        padding-left: 1em;
-    }
-
-    .alignementText {
-        display: flex;
-        flex-direction: column;
-        margin-left: 2em;
-        margin-right: 2em;
-        width: 36em;
-    }
-}
-
-.mapBruxelles {
+  }
+  .accueilPresentation .accueilImages {
+    width: 38em;
+    height: 20em;
+    transition: filter 0.3s ease-in-out;
+  }
+  .accueilPresentation .accueilImages:hover {
+    filter: brightness(115%);
+    transform: scale(1.2);
+    transition: transform 0.3s;
+  }
+  .titletext {
+    margin-left: 3%;
+  }
+  .accueilPresentation .accueilTextes {
+    padding-left: 1em;
+  }
+  .accueilPresentation .alignementText {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2em;
+    margin-right: 2em;
+    width: 36em;
+  }
+  
+  .mapBruxelles {
     margin-left: 20em;
-    .maps{
-        margin-right: 20px;
-        
-    }
-}
+  }
+  .mapBruxelles .maps {
+    margin-right: 20px;
+  }
 
-/* page événements */
-
-.eventBx {
+  .eventBx {
     margin-left: 20%;
     margin-right: 20%;
     width: 67.1%;
     text-align: justify;
     justify-content: center;
-    
-}
-
-.eventMarcheBx {
+  }
+  
+  .eventMarcheBx {
     display: flex;
     flex-direction: row;
     gap: 2%;
-    .marcheBx {
-        width: 38%;
-        transition: transform 0.3s;
-}
-
-    .marcheBx:hover {
-        transform: scale(2);
-}
-
-    .marchesBrx {
-        width: 48%;
-        height: 55%;
-        
-}
-
-}
-.descriptionEvent {
+  }
+  .eventMarcheBx .marcheBx {
+    width: 38%;
+    transition: transform 0.3s;
+  }
+  .eventMarcheBx .marcheBx:hover {
+    transform: scale(2);
+  }
+  .eventMarcheBx .marchesBrx {
+    width: 48%;
+    height: 55%;
+  }
+  
+  .descriptionEvent {
     width: 90%;
     line-height: 25px;
-}
-
-.eventVoisinsBx {
+  }
+  
+  .eventVoisinsBx {
     margin-left: 20%;
     margin-right: 20%;
     text-align: justify;
@@ -116,20 +103,408 @@
     width: 60%;
     gap: 1em;
     line-height: 25px;
-   
-}
-
-.afficheVoisins {
+  }
+  
+  .afficheVoisins {
     transition: transform 0.3s;
-}
-
-.afficheVoisins:hover {
+  }
+  
+  .afficheVoisins:hover {
     transform: scale(1.4);
-}
-
-.youtubeVoisin {
+  }
+  
+  .youtubeVoisin {
     margin-left: 20%;
-}
+  }
+  
 
+  @media screen and (max-width : 930px) {
+  
 
-
+    /*---------------HEADER MOBILE---------------*/
+    .search-bar {
+      top: 34%;
+      width: 70%;
+    }
+  
+    .bivnBruxelles {
+      display: flex;
+      justify-content: space-between;
+      
+    }
+    #dark {
+      margin-left: -120%;
+      
+    }
+  html {
+    overflow-x: hidden;
+  }
+  .bvn {
+    padding-top: 1%;
+    font-size: 22px;
+    
+  }
+  .NECP {
+    display: none;
+  }
+  
+  .mobile-menu {
+    display: block;
+    
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+   
+    
+  }
+  
+  .dropbtn {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 12px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+   margin-left: -10%;
+  
+    
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: fixed;
+    background-color: black;
+    min-width: 160px;
+    font-size: 12px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    left: 65%;
+    top :8.5%;
+    text-align: center;
+   
+  }
+  
+  .dropdown-content a {
+    color: rgb(252, 252, 252);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+    
+  }
+  a:hover {
+    color: yellow;
+  }
+  
+  /*-------------------SLIDER ACTU ET AGENDA MOBILE-----------------------*/
+    .gallery{
+  
+        width: 400px;
+        height: 300px;
+        margin-left: 14%;
+        margin-top: -5%;
+           
+    }
+    
+    .container {
+      
+      margin-left: auto;
+      margin-right: auto;
+      animation: animate 1s linear;
+    }
+    
+    @keyframes animate {
+      0%{
+          transform:  rotateX(0deg);
+      }
+      100%{
+          transform:  rotateX(360deg);
+      }
+    }
+    
+    
+    .gallery:hover{
+      animation-play-state:paused;
+      
+    }
+    
+    .actu, .agenda{
+      
+        transform: rotateX(calc(var(--i) * 80deg)) translateZ(180px);
+      
+     
+    }
+  
+  .titleactu {
+    margin-left: 2%;
+  }
+  
+  
+  span img{
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+   
+  }
+  
+  
+  
+  
+  
+  .lienactu, .lienage, .lienage1, .lienactu1 {
+    
+    text-decoration: none;
+    list-style-type: none;
+    margin-left: auto;
+    overflow: hidden;
+    line-height: 1;
+    padding-left: 2%;
+    padding-right: 2%;
+    margin-top: 5%;
+    
+   
+  }
+  /*-----------------PRESENTATION PAGE ACCEUIL MOBILE------------------*/
+  .decouvrezBruxelles {
+    margin-left: 2%;
+  }
+  
+  
+  .accueilPresentation {
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    background-color: rgba(234, 234, 234, 0.887);
+    margin-left: auto;
+    width: 100%;
+    
+  }
+  
+  .accueilPresentation .accueilImages:hover {
+    filter: brightness(115%);
+    transform: scale(1.2);
+    transition: transform 0.3s;
+  }
+  .accueilPresentation .accueilImages {
+    width: 100%;
+    height: 20em;
+    transition: filter 0.3s ease-in-out;
+  }
+  .accueilPresentation .accueilTextes {
+    flex-flow: column wrap;
+  }
+  
+  .accueilPresentation .alignementText {
+   
+    margin-left: 2%;
+    margin-right: 2%;
+    width: 90%;
+    
+  }
+  /*------------------CARTES BRUXELLES MOBILE-----------------------*/
+  .bru {
+    margin-left:  2%;
+  }
+  .mapBruxelles {
+    margin-left: auto;
+    width: 100%;
+    margin-left: 0;
+  }
+  .mapBruxelles .maps {
+    width: 100%;
+  
+  }
+  .maps{
+    margin-top: 5%;
+  }
+  
+  /*----------------PAGE EVENEMENT MOBILE----------------*/
+  .come {
+    margin-left: -15%;
+    
+    
+  }
+  .eventBx {
+   width: 80%;
+    
+  }
+  .eventMarcheBx {
+    display: flex;
+    flex-direction: column;
+    margin-left: -15%;
+    
+  }
+  .eventMarcheBx .marcheBx, .marchesBrx {
+    width: 90%;
+    transition: transform 0.3s;
+    
+  }
+  .eventMarcheBx .marchesBrx {
+    width: 90%;
+    height: 100%;
+  
+  }
+  .descriptionEvent {
+    width: 100%;
+    margin-left: -15%;
+   
+  }
+  .eventVoisinsBx {
+    margin-left : 0%;
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+  
+  .afficheVoisins {
+    width: 90%;
+    height: 100%;
+    margin-left: 5%;
+    
+  }
+  .fetevois {
+    text-align: left;
+    margin-left : 5%;
+    justify-content: left;
+    margin-right: 5%;
+    
+  }
+  
+  .youtubeVoisin {
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  /*----------------PAGE CONTACT MOBILE----------------*/
+  .formNous {
+    
+    line-height: 25px;
+    width: 100%;
+    margin-left: 2%;
+  }
+  
+  .formulaire {
+    
+    display: flex;
+    flex-direction: column;
+    width: 76%;
+    border: solid black 2px;
+    margin-left: 0;
+    background-color: rgba(234, 234, 234, 0.887);
+  }
+  .formulaire .logoBruxelles {
+    width: 150px;
+    height: 75px;
+  }
+  
+  .envoyer {
+    width: 10em;
+    background-color: white;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    margin-left: 27%;
+  }
+  
+  .gen, .contactTel, .ameliorations {
+    width:80%;
+    margin-left: 2%;
+    font-size: 15px;
+  }
+  .contactDirect {
+    display: flex;
+    flex-direction: column;
+    line-height: 50px;
+    padding: 2em;
+    width: 80%;
+    border: solid black 2px;
+    border-radius: 5%;
+    background-color: rgba(234, 234, 234, 0.887);
+    margin-left: -1.8%;
+    text-align: left;
+  }
+  
+  
+  /*----------------FOOTER MOBILE---------------------*/
+  footer {
+    height: 25em;
+    width: 100%;
+    margin-top: 15%;
+    background-color: grey;
+    overflow: hidden;
+    color: white;
+    padding-top: 1%;
+  }
+  .fa-twitter {
+    padding: 10px;
+    font-size: 30px;
+    color: black;
+    margin-left: 20%;
+  }
+  
+  .fa-facebook-f, .fa-instagram, .fa-youtube, .fa-tiktok, .fa-spotify {
+    font-size: 30px;
+    color: black;
+    padding: 5px;
+  }
+  .brucity {
+    text-align: center;
+    font-size: 13px;
+  }
+  .foo {
+    display: inline;
+    border: none;
+    box-shadow: none;
+    text-transform: uppercase;
+    list-style-type: none;
+    margin: 10%;
+  }
+  
+  
+  .cpumlca {
+    
+    margin: 3%;
+    font-size: 12.5px;
+    color: black;
+    
+   
+  
+  }
+  .animalsfriends {
+    margin-bottom: -51%;
+    margin-left: 0%;
+    
+  }
+  .citybxl{
+    margin-left: 31%;
+    margin-bottom: -45%;
+  }
+  .patrimoine {
+    margin-bottom: -51%;
+    margin-left: 23%;
+  
+  }
+  .unesco {
+    margin-left: 0;
+    margin-bottom: -48%;
+  }
+  
+  .obcn {
+    margin: 0;
+    margin-top: 3%;
+    text-align: center;
+    font-size: 11px;
+  }
+  .stng {
+    font-weight: bold;
+    text-decoration: underline;
+    
+  }
+    
+    
+    }
