--- a/SCSS/pages/_home.scss
+++ b/SCSS/pages/_home.scss
@@ -118,7 +118,7 @@
   }
   
 
-  @media screen and (max-width : 930px) {
+  @media screen and (min-width : 300px) and (max-width : 1000px) {
   
 
     /*---------------HEADER MOBILE---------------*/
@@ -439,6 +439,7 @@
     overflow: hidden;
     color: white;
     padding-top: 1%;
+    
   }
   .fa-twitter {
     padding: 10px;
@@ -476,27 +477,28 @@
   
   }
   .animalsfriends {
-    margin-bottom: -51%;
+    margin-bottom: -33%;
     margin-left: 0%;
+    position: relative;
     
   }
   .citybxl{
     margin-left: 31%;
-    margin-bottom: -45%;
+    margin-bottom: -28%;
   }
   .patrimoine {
-    margin-bottom: -51%;
+    margin-bottom: -33%;
     margin-left: 23%;
   
   }
   .unesco {
     margin-left: 0;
-    margin-bottom: -48%;
+    margin-bottom: -30%;
   }
   
   .obcn {
     margin: 0;
-    margin-top: 3%;
+    margin-top: 25%;
     text-align: center;
     font-size: 11px;
   }
