--- a/SCSS/layout/_footer.scss
+++ b/SCSS/layout/_footer.scss
@@ -91,4 +91,22 @@
   }
   
   
- 
+ /*-------NETHERLANDS----------*/
+ .foonl {
+  border: 1px black solid;
+  box-shadow: -1px -1px 13px hsla(0, 0%, 9%, 0.25);
+  width: 50%;
+  height: 35px;
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
+  text-transform: uppercase;
+  list-style-type: none;
+  color: black;
+  margin-left: 26%;
+  margin-top: -7%;
+  padding-top: 0.6%;
+  overflow: hidden;
+  
+}
