--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -156,6 +156,7 @@ span img {
 }
 
 footer {
+  border: 1px grey solid;
   height: 50%;
   width: 100%;
   margin-top: 15%;
@@ -310,9 +311,12 @@ a:hover {
   width: 35%;
   margin-left: 30%;
   margin-right: 30%;
-  border: solid black 2px;
+  border: solid white 2px;
+  color: white;
   padding: 50px;
-  background-color: rgba(234, 234, 234, 0.887);
+  background-image: url(images/atomium.jpg);
+  background-size: cover;
+  filter: grayscale(80%);
 }
 
 .formulaire .logoBruxelles {
